--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,11 @@
 body {
   background-color: #000300;
 }
+
+.slick-dots li button:before {
+  color: white!important;
+}
+
+.slick-dots li.slick-active button:before {
+  color:var(--primary-green) !important;
+}
